# illuminerf_results

./: LICENSE  README.md  compute_metrics_tensoir.py  environment.yaml  pyproject.toml
