[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "illuminerf_results"
version = "0.0.1"
authors = [{ name = "Xiaoming Zhao", email = "xiaoming.zhao9@gmail.com" }]
description = ""
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["illuminerf_results"]

[project.urls]
"Homepage" = "https://illuminerf.github.io/"
"Bug Tracker" = "https://github.com/illuminerf/illuminerf_results"


[tool.ruff]
line-length = 88
lint.select = [
    "E",  # pycodestyle errors.
    "F",  # Pyflakes rules.
    "I",  # isort formatting.
    "PLC",  # Pylint convention warnings.
    "PLE",  # Pylint errors.
    "PLR",  # Pylint refactor recommendations.
    "PLW",  # Pylint warnings.
    "NPY201" # NumPY 2.0 migration https://numpy.org/devdocs/numpy_2_0_migration_guide.html#ruff-plugin
]
lint.ignore = [
    "E501",  # Line too long.
    "F722",  # Forward annotation false positive from jaxtyping. Should be caught by pyright.
    "F821",  # Forward annotation false positive from jaxtyping. Should be caught by pyright.
    "PLR2004",  # Magic value used in comparison.
    "PLR0915",  # Too many statements.
    "PLR0913",  # Too many arguments.
    "PLC0414",  # Import alias does not rename variable. (this is used for exporting names)
    "PLC1901",  # Use falsey strings.
    "PLR5501",  # Use `elif` instead of `else if`.
    "PLR0911",  # Too many return statements.
    "PLR0912",  # Too many branches.
    "PLW0603",  # Globa statement updates are discouraged.
    "PLW2901",  # For loop variable overwritten.
    "PLR1730",  # Replace if statement with min/max
]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false
section-order = ["future", "standard-library", "third-party", "torch", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
"torch" = ["torch*"]
